Fri Mar  5 20:58:37 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: Net::HTTPResponse#response is obsolete.
	  [ruby-core:02592]

	* lib/net/http.rb: Net::HTTPResponse#header is obsolete.

	* lib/net/http.rb: Net::HTTPResponse#read_header is obsolete.

Fri Mar  5 20:10:57 2004  Minero Aoki  <aamine@loveruby.net>

	* ext/strscan/strscan.c: new method StringScanner#initialize_copy
	  to allow #dup and #clone.

	* test/strscan/test_strscan.rb: test StringScanner#dup.

Fri Mar  5 19:42:09 2004  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb (HTTPResponse#to_ary): should return an object
	  which does not respond to #to_ary.  It causes infinite loop in
	  puts. [ruby-core:02578]

Fri Mar  5 00:51:35 2004  Dave Thomas  <dave@pragprog.com>

	* lib/test/unit.rb: Move RDoc documentation so that you can 
	  now say 'ri Test::Unit'

Thu Mar  4 22:31:40 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in: miniruby is not needed for cross compile.

	* configure.in (PREP): miniruby for native compile.

Thu Mar  4 11:46:32 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/drb/extservm.rb (DRb::ExtServManager#invoke_service_command):
	  detach server processes to get rid of zombies.

Thu Mar  4 08:08:36 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/syck/rubyext.c: get rid of warnings.

	* lib/rss/taxonomy.rb: ditto.

	* lib/rdoc/ri/ri_formatter.rb: ditto.

	* test/ruby/test_assignment.rb: ditto.

Thu Mar  4 01:17:28 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/ri/ri_display.rb (DefaultDisplay::page): wait until the
	  pager terminates.

Wed Mar  3 13:10:56 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (method_hash): new method. [ruby-talk:93968]

	* eval.c (proc_eq): do not compare dyna_vars.

	* eval.c (proc_hash): new method.

	* eval.c (rb_yield_0): protect break/return from within orphan (or
	  lambda) Proc object.

Wed Mar  3 09:52:05 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
